# phox

./: .gitmodules  CMakeLists.txt
include/: Buffer.hpp  Common.hpp  Device.hpp  Image.hpp  Model.hpp  Renderer.hpp  Window.hpp  phox.hpp
include/Pipeline/: GraphicsPipeline.hpp  Pipeline.hpp  PipelineLayout.hpp  Shader.hpp
include/Platform/: Platform.hpp  PlatformLinux.hpp  PlatformMacOS.hpp  PlatformWindow.hpp
src/: Buffer.cpp  Device.cpp  Image.cpp  Model.cpp  Renderer.cpp  Window.cpp
src/Pipeline/: GraphicsPipeline.cpp  PipelineLayout.cpp  Shader.cpp
